--- a/pom.xml
+++ b/pom.xml
@@ -34,10 +34,11 @@
 			<artifactId>jstl</artifactId>
 		</dependency>
 		<!--추가라이브러리 종료-->
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>-->
+		</dependency>
+		
 		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
